tests/test_assets/semantic/invalid/mutation/value_type.cog
test::() -> void {
    value: i32 = 1;
    flag: bool = true;

    value += flag;
}