tests/test_assets/semantic/invalid/mutation/value_type.expected
semantic error at line 5: compound assignment value must be numeric
1 semantic error generated.
